--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 /* font-family: 'Poppins', sans-serif; */
@@ -97,6 +98,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #FAEFE0;
 }
 
 /* ========================================= */
